# MS2-Spectral-Embeddings

./: LICENSE  README.md  metabolomics-ml.yml  pyproject.toml
data/raw/2022-07-27-isolates-ms2-microbeMASST/: readMe-2022-07-27.rtf  sample-key_2022-07-27.txt  taxonomy.txt
