[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "chemcognition-lab" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "seaborn",
    "notebook",
    "numpy",
    "scipy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "more-itertools"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = [
  "I", # Add import sorting
  "N",   # enforce naming conventions, e.g. ClassName vs function_name
  "FBT", # detect boolean traps
  "BLE", # disallow catch-all exceptions
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

